2008-02-06  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-texture.c:
        Initial attempt at handling resizing/tranformed source textures.

	* clutter/pango/pangoclutter-render.c: (draw_glyph):
        Guards against freetype returning NULL bitmaps and 
        thus causing device by zeros on NVIDIA drivers. (see ml)

2008-02-05  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c: (clutter_actor_get_vertices):
        Make sure GL related Matrices are initialised. Fixes #756

	* clutter/clutter-texture.c:
        Fix up code from Norways answer to Jean-Michel Basquiat.
        (warning on tile_get_pixbuf)

2008-02-05  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-texture.c: removed spurious left over debug printf.

2008-02-05  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-texture.c: applied modified patch from Gwenole
	Beuchesne adressing bug #635. Adressing a buffer overflow in
	clutter_texture_get_pixbuf() when tiling is forced.

2008-02-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-shader.c (clutter_shader_constructor): Keep the
	constructor line under the 80 columns using a variable.

2008-02-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-shader.c: Small documentation and style fixes

	* tests/test-scale.c: Constify the gravities array.

2008-02-04  Chris Lord  <chris@openedhand.com>

	* clutter/clutter-actor.c: (clutter_actor_transform_stage_point):
	Check that x_out and y_out != NULL before setting their contents

2008-02-04  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-timeline.c: (clutter_timeline_rewind): updated
	documentation to take direction into account.

2008-02-04  Øyvind Kolås  <pippin@o-hand.com>

	* tests/test-fbo.c: (make_shader):
	* tests/test-shader.c: (main): multiply the resulting gl_FragColor
	with gl_Color before being done to take opacity into account in the
	GLSL fragments.
